## GeoTag 4.5 (work in progress)

### New Features

* center the map (more or less) on a track when the track is opened.
* exiftool 11.22

### Bug Fixes

* fix error that caused a "could not save images" alert even when all image
  data had been saved.
* handle GPX logs that include milliseconds the location timestamp.

## GeoTag 4.4

### New Features

* GeoTag can now read GPS track logs in the format of a GPX file and display
  tracks on the map.  This can help locate places where pictures were taken.
  Use Open (⌘-O) to select GPX files.  GPX files can also be dragged onto the
  table.
* Image location can be updated from a GPS track logs.  Select the images to
  update and use ⌘T, Edit -> Locn from track, or crtl-click -> Locn from track.
  Note: this can be time consuming depending upon the number of images selected
  and the number of track log point loaded.
* Images can now be opened with GeoTag.  You can select one or more images in
  finder and then right click and select the "Open With" option.  GeoTag will
  be one of app choices.
* Double clicking on a row in the table will open a window to update the
  timestamp of the image.  Timestamps are not changed during cut/copy/paste
  operations.
* A time delta can be applied to multiple images.   Select the images and
  use ⌘T, Edit -> Modify Date/Time, or ctrl-click -> Modify Date/Time.  Enter the
  new time for the selected image.  A time delta between the new and the existing
  date/time will be calculated. That delta is then applied to all selected items.
* Images can be selected and the map can be panned/zoomed while saving images.
  Images locations can not be edited until the save is complete.
* The last 10 map searches are saved across program runs. When Clicking on the
  search box saved search strings are indicated by a down arrow next to the
  Q icon. Click on the arrow next to open the menu of saved search strings.
* ExifTool version 11.10
* (internal) Swift 4.2, Xcode 10

### Bug fixes
