@@ -23,6 +23,10 @@ Version 4.4.x is the latest version.  It workes on macOS 10.12 or later. Version
 ### New Features
 
 * center the map (more or less) on a track when the track is opened.
+* change GPX track color to blue so red pins don't get lost in the red track.
+* change GPX file loaded notification to a sheet attached to the GeoTag main
+  window.  Dual monitor users would sometimes find the pop-up previously used
+  on the wrong monitor, i.e. no the monitor they were looking at.
 * exiftool 11.22
 
 ### Bug fixes
